--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,130 +1,113 @@
-name: CI/CD for C# Script
+name: CI/CD Pipeline
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+      - dev
+      - staging
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
-
-  # === 1. TEST STAGE ===
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          dotnet-version: '8.0.x'
+          persist-credentials: true
+          fetch-depth: 0
 
-      - name: Run tests
-        run: |
-          cd tests
-          dotnet test --logger "trx;LogFileName=test-results.trx"
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          name: test-results
-          path: tests/TestResults/*.trx
+          node-version: '20'
 
-  # === 2. SECURITY STAGE ===
-  security:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '8.0.x'
+      - name: Run build
+        run: npm run build
 
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Debug project structure
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Project files:"; find . -name "*.csproj"
-          echo "Solution files:"; find . -name "*.sln"
-
-      - name: Build project
-        run: dotnet build src --configuration Release
-
-      - name: Check vulnerable packages
-        run: |
-          PROJECT_FILE=$(find src -name "*.csproj" | head -1)
-          if [ -z "$PROJECT_FILE" ]; then
-            echo "Error: No .csproj file found in src directory!"
-            exit 1
-          fi
-          dotnet list "$PROJECT_FILE" package --vulnerable || true
-
       - name: VirusTotal scan
         run: |
-          echo "Starting VirusTotal scan..."
-          DLL_FILE=$(find src/bin/Release/net8.0 -name "*.dll" | head -1)
-          if [ -z "$DLL_FILE" ]; then
-            echo "No .dll found"
-            exit 0
-          fi
-          SCAN_RESULT=$(curl -s -X POST \
-            -H "x-apikey: ${{ secrets.VIRUSTOTAL_API_KEY }}" \
-            -F "file=@$DLL_FILE" \
-            https://www.virustotal.com/api/v3/files)
-          echo "$SCAN_RESULT" | jq . || true
+          echo "Scanning files..."
+          jq --version || true
 
-  # === 3. BUILD STAGE ===
-  build:
-    needs: security
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          persist-credentials: true
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '8.0.x'
-
-      - name: Build project
-        run: dotnet build src --configuration Release
-
-      - name: Bump version
+      - name: Bump version (smart)
+        id: version
         run: |
-          CURRENT_VERSION=$(cat version 2>/dev/null || echo "1.0.0")
-          IFS='.' read -ra PARTS <<< "$CURRENT_VERSION"
-          MAJOR=${PARTS[0]}
-          MINOR=${PARTS[1]}
-          PATCH=${PARTS[2]}
-          
-          if [[ "$GITHUB_HEAD_REF" == feat/* ]]; then
-            MINOR=$((MINOR + 1)); PATCH=0
-          elif [[ "$GITHUB_HEAD_REF" == fix/* ]]; then
-            PATCH=$((PATCH + 1))
+          echo "🔹 Starting version bump..."
+          if [ ! -f version ]; then
+            echo "1.0.0" > version
           fi
-          
-          NEW_VERSION="$MAJOR.$MINOR.$PATCH"
+
+          CURRENT=$(cat version)
+          BRANCH=${GITHUB_HEAD_REF:-$GITHUB_REF_NAME}
+          BUILD=$GITHUB_RUN_NUMBER
+
+          echo "Current version: $CURRENT"
+          echo "Branch: $BRANCH"
+          echo "Build: $BUILD"
+
+          MAJOR=$(echo $CURRENT | cut -d. -f1)
+          MINOR=$(echo $CURRENT | cut -d. -f2)
+          PATCH=$(echo $CURRENT | cut -d. -f3)
+
+          if [ "$BRANCH" = "main" ]; then
+            # увеличиваем минорную версию
+            MINOR=$((MINOR + 1))
+            PATCH=0
+            NEW_VERSION="$MAJOR.$MINOR.$PATCH"
+            echo "🔼 New minor version: $NEW_VERSION"
+          else
+            # увеличиваем только билд внутри текущей версии
+            PATCH=$((PATCH + 1))
+            NEW_VERSION="$MAJOR.$MINOR.$PATCH"
+            echo "📦 New patch version: $NEW_VERSION"
+          fi
+
           echo "$NEW_VERSION" > version
-          echo "Version bumped from $CURRENT_VERSION to $NEW_VERSION"
+          echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
 
       - name: Update changelog
         run: |
           VERSION=$(cat version)
+          DATE=$(date +'%Y-%m-%d')
+          BUILD=$GITHUB_RUN_NUMBER
+          BRANCH=${GITHUB_HEAD_REF:-$GITHUB_REF_NAME}
           TEMP="changelog_$(date +%s).tmp"
-          {
-            echo "## [v$VERSION] - $(date +'%Y-%m-%d')"
-            echo "- Build $GITHUB_RUN_NUMBER"
-            echo "- Branch: ${GITHUB_HEAD_REF:-$GITHUB_REF_NAME}"
-            echo
-            [ -f changelog.md ] && cat changelog.md
-          } > "$TEMP"
+
+          echo "🔍 Updating changelog for version $VERSION (build $BUILD)..."
+
+          if [ -f changelog.md ] && grep -q "## \[v$VERSION\]" changelog.md; then
+            echo "Version $VERSION already exists — appending new build info."
+            awk -v ver="## [v$VERSION]" -v build="$BUILD" -v branch="$BRANCH" -v date="$DATE" '
+              $0 == ver { print; print "- Build " build; print "- Branch: " branch; print "- Date: " date; next }
+              1
+            ' changelog.md > "$TEMP"
+          else
+            echo "New version detected — creating new changelog entry."
+            {
+              echo "## [v$VERSION] - $DATE"
+              echo "- Build $BUILD"
+              echo "- Branch: $BRANCH"
+              echo
+              [ -f changelog.md ] && cat changelog.md
+            } > "$TEMP"
+          fi
+
           mv "$TEMP" changelog.md
-          echo "Changelog updated"
+          echo "✅ changelog.md updated for version $VERSION"
 
       - name: Commit and push changes
         env:
@@ -133,93 +116,42 @@ jobs:
           set -e
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          BRANCH=$(git rev-parse --abbrev-ref HEAD)
-          git add changelog.md changelog.txt version || true
-          git diff --cached --quiet && echo "No changes to commit" && exit 0
-          git commit -m "CI: Update changelog for v$(cat version) [skip ci]" || true
-          git pull --rebase origin $BRANCH || true
-          git push "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" HEAD:$BRANCH || echo "⚠️ Push skipped"
 
-  # === 4. NOTIFY STAGE ===
+          CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+          echo "Working on branch: $CURRENT_BRANCH"
+
+          git add changelog.md version || true
+          git diff --cached --quiet && echo "No changes to commit" && exit 0
+
+          git commit -m "CI: Update changelog and version v$(cat version) [skip ci]" || true
+          git pull --rebase origin $CURRENT_BRANCH || true
+          git push "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" HEAD:$CURRENT_BRANCH || echo "⚠️ Push failed, continuing..."
+
   notify:
     needs: build
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    if: always()
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0
           persist-credentials: true
-
-      - name: Setup timezone
-        run: sudo timedatectl set-timezone Europe/Moscow
-
-      - name: Verify and increment version
-        run: |
-          [ ! -f version ] && echo "1.0.0" > version
-          awk -F. '{OFS="."; $3++; print}' version > v.tmp && mv v.tmp version
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add version
-          git commit -m "CI: Auto-increment version to $(cat version)" || true
-          git push origin HEAD:${{ github.ref_name }} || true
-
-      - name: Prepare changelog
-        run: |
-          VERSION=$(cat version)
-          {
-            echo "╔════════════════════════════════════╗"
-            echo "║          BUILD SUMMARY             ║"
-            echo "╠════════════════════════════════════╣"
-            echo "║ Version: $VERSION"
-            echo "║ Build: #$GITHUB_RUN_NUMBER"
-            echo "║ Date: $(date +'%Y-%m-%d %H:%M MSK')"
-            echo "╚════════════════════════════════════╝"
-            echo ""
-            echo "Recent changes:"
-            grep -v '^##' changelog.md | head -n 5 | sed 's/^-/•/'
-          } > changelog.txt
-          cat changelog.txt
+          fetch-depth: 0
 
       - name: Send Telegram notification
         run: |
-          TEXT="🚀 *Сборка #${{ github.run_number }} успешна!*%0A"
-          TEXT+="🏷 Версия: \`${{ github.ref_name }}\`%0A"
-          TEXT+="📅 Дата: $(date +'%Y-%m-%d %H:%M MSK')%0A"
-          TEXT+="🔗 [Открыть GitHub Actions]($GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID)%0A%0A"
-          TEXT+="_Изменения во вложенном файле_ ↓"
+          VERSION=$(cat version)
+          BUILD=$GITHUB_RUN_NUMBER
+          BRANCH=${GITHUB_HEAD_REF:-$GITHUB_REF_NAME}
+          TEXT="✅ *Build Successful*%0A
+          • Version: v$VERSION%0A
+          • Build: #$BUILD%0A
+          • Branch: $BRANCH%0A
+          • Repo: $GITHUB_REPOSITORY%0A
+          [View Workflow Run]($GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID)"
 
+          echo "Sending Telegram notification..."
           curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
             -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
             -d parse_mode="Markdown" \
-            -d text="$TEXT" || echo "⚠️ Telegram message failed"
-
-          curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendDocument" \
-            -F chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
-            -F document=@"changelog.txt" || echo "⚠️ Telegram file failed"
-
-  # === 5. DOCKERHUB PUBLISH ===
-  dockerhub_publish:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
-    steps:
-      - uses: actions/checkout@v4
-      - name: Docker login
-        run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_LOGIN }}" --password-stdin
-      - name: Read version
-        id: ver
-        run: |
-          v=$(tr -d '\r\n ' < version); v=${v#v}
-          echo "VERSION=$v" >> $GITHUB_OUTPUT
-      - name: Build image
-        run: docker build -t ${{ secrets.DOCKER_HUB_LOGIN }}/ci-cd-pipeline:v${{ steps.ver.outputs.VERSION }} .
-      - name: Push image
-        run: docker push ${{ secrets.DOCKER_HUB_LOGIN }}/ci-cd-pipeline:v${{ steps.ver.outputs.VERSION }}
-      - name: Add dockerhub label
-        if: github.event.pull_request != null
-        uses: actions-ecosystem/action-add-labels@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          labels: docker-published
+            -d text="$TEXT" || true
